...
                
                // Title section
                Text("auth.reset_password".localized)
                    .font(.title)
                    .fontWeight(.bold)
                    .padding(.bottom, 4)
                    .accessibilityIdentifier("forgotPasswordTitleText")
                
                Text("auth.reset_instructions".localized)
                    .font(.subheadline)
                    .foregroundColor(.secondary)
                    .multilineTextAlignment(.center)
                    .padding(.horizontal, 25)
...
                            .autocapitalization(.none)
                            .disableAutocorrection(true)
                            .overlay(
                                RoundedRectangle(cornerRadius: 10)
                                    .stroke(isEmailValid || email.isEmpty ? Color.clear : Color.red, lineWidth: 1)
                            )
                            .accessibilityIdentifier("forgotPasswordEmailTextField")
                        
                        // Error message
                        if !isEmailValid && !email.isEmpty {
                            Text("auth.invalid_email".localized)
                                .font(.caption)
                                .foregroundColor(.red)
                                .multilineTextAlignment(.leading)
                                .transition(.opacity)
                                .padding(.leading, 4)
                                .accessibilityIdentifier("forgotPasswordEmailValidationError")
                        }
                    }
                    
                    // Reset Button
                    Button(action: {
                        Task {
...
                                .foregroundColor(.white)
                                .cornerRadius(10)
                        }
                    }
                    .disabled(authViewModel.isLoading)
                    .padding(.top, 10)
                    .accessibilityIdentifier("resetPasswordButton")
                    
                    // Back to sign in button
                    Button(action: {
                        dismiss()
                    }) {
                        Text("auth.sign_in".localized)
...
                    .accessibilityIdentifier("forgotPasswordCopyrightText")
                
                Spacer()
            }
            .padding(.bottom, 30)
        }
        .accessibilityIdentifier("forgotPasswordScreenView")
        .toolbar {
            ToolbarItem(placement: .navigationBarLeading) {
                Button(action: {
                    dismiss()
                }) {
                    Image(systemName: "xmark")
...
